fix backend wrapping

--- a/src/mist/io/static/css/home.css
+++ b/src/mist/io/static/css/home.css
@@ -3,7 +3,7 @@
 #home-page #add-backend-btn {
     float: right;
     margin-right: 0px;
-    margin-bottom: 0;
+    margin-bottom: 3px;
 }
 #home-page .ui-listview {
     clear: both;
